Added "register" text to the menus.

--- a/app/views/partials/_main_menu.html.erb
+++ b/app/views/partials/_main_menu.html.erb
@@ -9,7 +9,7 @@
                 </ul>
             </li>
         <% else %>
-            <li class="no-bullet"><%= link_to 'Login', login_path %></li>
+            <li class="no-bullet"><%= link_to 'Login / Register', login_path %></li>
         <% end %>
         <li><%= link_to 'Help', help_path, target: '_blank' %></li>
     </ul>
