--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -31,7 +31,7 @@
                 </ul>
             </li>
         <% else %>
-            <li class="dropdown"><%= link_to 'Login', login_path %></li>
+            <li class="dropdown"><%= link_to 'Login / Register', login_path %></li>
         <% end %>
     </ul>
 </div>
