Fixed link color on main page.

--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,6 +1,6 @@
 <head>
     <style>
-        body, h1, h3, span, a:link, a:visited, a:hover, a:active {
+        body, h1, h3, span {
             color: white;
         }
     </style>
