--- a/app/assets/stylesheets/_menu.scss
+++ b/app/assets/stylesheets/_menu.scss
@@ -5,6 +5,10 @@
 }
 
 ul#display-menu {
+    margin-bottom: 0px;
+    padding-left: 0px;
+    flex-wrap: nowrap;
+
     > li {
         display: inline;
 
