Added daily summary table, and changed the scheduled task to create one and use it for the digest email.

--- a/app/views/user_mailer/digest.html.erb
+++ b/app/views/user_mailer/digest.html.erb
@@ -10,5 +10,6 @@
         <% end %>
     </ul>
     <li><b>Total users: </b><%= @total_users %></li>
-    <li><b>Total activated users: </b> <%= @total_activated_users %></li>
+    <li><b>Total activated users: </b> <%= @total_active_users %></li>
+    <li><b>Active user growth: </b><%= @user_growth %></li>
 </ul>
