Fixed email digest.

--- a/app/views/user_mailer/digest.text.erb
+++ b/app/views/user_mailer/digest.text.erb
@@ -7,5 +7,5 @@ Top streamers:
     <%= streamer.first %>: <%= streamer[1] %> users
 <% end %>
 Total users: <%= @total_users %>
-Total activated users: <%= @total_active_users %>
+Total activated users: <%= @active_users %>
 Active user growth: <%= @user_growth %>
