--- a/app/views/partials/_google_analytics_init.html.erb
+++ b/app/views/partials/_google_analytics_init.html.erb
@@ -4,6 +4,8 @@
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    var dimensionValue = <%= logged_in? ? current_user.email : 'null' %>;
+    ga('set', 'dimension1', dimensionValue);
     ga('create', 'UA-71040654-1', 'auto');
     ga('send', 'pageview');
 
