--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,6 +32,7 @@
                 $.ajax( {
                     type: 'GET',
                     url: 'https://api.twitch.tv/kraken/channels/' + name,
+                    headers: { "Client-ID": "<%= ENV["TWITCH_CLIENT_ID"] %>" },
                     async: true
                 } ).success( function ( data ) {
                     console.log( "Success" );
